syntax = "proto3";

package applications.grpc.loader.v1;

import "libraries/media/proto/media.proto";
import "libraries/media/proto/callback.proto";

message Filters {
  optional PixelateFilter pixelate = 1;
}

message PixelateFilter {
  int64 size = 1;
}


message CreateOrGetMediaFromUploadsRequest {
  string linkedId = 1;
  overdoll.libraries.MediaLinkType linkedType = 2;
  overdoll.libraries.SOURCE source = 3;
  repeated string uploadIds = 4;
}

message CreateOrGetMediaFromUploadsResponse {
  repeated overdoll.libraries.Media media = 1;
}

message GenerateFilteredImageFromMediaRequest {
  repeated overdoll.libraries.Media media = 1;
  string linkedId = 2;
  overdoll.libraries.MediaLinkType linkedType = 3;
  overdoll.libraries.SOURCE source = 4;
  Filters filters = 5;
}

message GenerateFilteredImageFromMediaResponse {
  repeated overdoll.libraries.Media media = 1;
}

message ConvertResourceToMediaRequest {
  string resourceId = 1;
  string itemId = 2;
}

message ConvertResourceToMediaResponse {
  overdoll.libraries.Media media = 1;
}

service Loader {
  rpc ConvertResourceToMedia(ConvertResourceToMediaRequest) returns (ConvertResourceToMediaResponse);
  rpc CreateOrGetMediaFromUploads(CreateOrGetMediaFromUploadsRequest) returns (CreateOrGetMediaFromUploadsResponse);
  rpc GenerateFilteredImageFromMedia(GenerateFilteredImageFromMediaRequest) returns (GenerateFilteredImageFromMediaResponse);
}
